# FZ-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml
fz_manager/: __main__.py  factorio_zone_api.py  main.py  menu.py  shell.py  storage.py  titlebar.py  utils.py
fz_manager/api/: factorio_zone.py
tests/: test_fz_manager.py
